--- a/app/interfaces/templates/dashboard.html
+++ b/app/interfaces/templates/dashboard.html
@@ -19,7 +19,8 @@
                 <span class="brand-text">Prontoa!</span>
             </div>
         </div>
-        
+
+
         <div class="sidebar-menu">
             <a href="{{ url_for('viewpages.dashboard') }}" class="menu-item active">
                 <i class="fas fa-chart-line"></i>
@@ -60,10 +61,37 @@
                 </a>
             </div>
         </div>
-{% endblock %}
+        {% endblock %}
 
-{% block content %}
+        {% block content %}
         <!-- Métricas principales -->
+
+        <!--pruebas------------------------------------------------------------------------------------------------------------------------------------------------------->
+
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title"> Información del Usuario</h5>
+                <button id="obtener-info-btn" class="btn btn-primary">Obtener Información</button>
+                <div id="info-usuario" class="mt-3">
+                    <p>Resultado:<span id="resultado"></span></p>
+                    <p><strong>Nombre:</strong> <span id="user-name"></span></p>
+                    <p><strong>Correo Electrónico:</strong> <span id="user-email"></span></p>
+                    <p><strong>Telefono:</strong> <span id="user-phone"></span></p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title"> Actualizar nombre</h5>
+                <input type="text" id="nuevo-nombre" class="form-control" placeholder="Pon el nombre nuevo aquí">
+                <button id="actualizar-nombre-btn" class="btn btn-primary mt-2">Actualizar Nombre</button>
+            </div>
+        </div>
+
+        <!--fin pruebas-->
+
         <div class="metrics-grid">
             <div class="metric-card primary">
                 <div class="metric-value" id="orders-today">
